gitignore : ignore test output

--- a/front/.gitignore
+++ b/front/.gitignore
@@ -5,12 +5,17 @@
 /tmp
 /out-tsc
 /bazel-out
+.nyc_output
+.angular
+coverage
+instrumented
 
 # Node
 /node_modules
 npm-debug.log
 yarn-error.log
 package-lock.json
+
 
 # IDEs and editors
 .idea/
