--- a/front/package.json
+++ b/front/package.json
@@ -30,15 +30,15 @@
     "zone.js": "0.11.8"
   },
   "devDependencies": {
-    "@angular-builders/jest": "14.0.1",
     "@angular-builders/custom-webpack": "^14.0.1",
+    "@angular-builders/jest": "14.0.1",
     "@angular-devkit/build-angular": "14.2.1",
     "@angular-eslint/builder": "14.0.3",
     "@angular-eslint/eslint-plugin": "14.0.3",
     "@angular-eslint/eslint-plugin-template": "14.0.3",
     "@angular-eslint/schematics": "14.0.3",
     "@angular-eslint/template-parser": "14.0.3",
-    "@angular/cli": "14.2.1",
+    "@angular/cli": "^14.2.1",
     "@angular/compiler-cli": "14.2.0",
     "@briebug/jest-schematic": "4.0.0",
     "@cypress/code-coverage": "3.10.0",
