--- a/back/pom.xml
+++ b/back/pom.xml
@@ -160,6 +160,15 @@
 
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<systemPropertyVariables>
+						<spring.test.dirtiescontext.before-mode>before-method</spring.test.dirtiescontext.before-mode>
+					</systemPropertyVariables>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
